# BayesianJaxModels

./: README.md  pyproject.toml
examples/: vi_vs_analytical_posterior.ipynb
src/BayesianJaxModels/: __init__.py  layers.py  module.py  parameter.py  utils.py
tests/: test_bayesian_jax_models.py  test_bayesian_ode_example.py  test_bayesian_vi_mcmc.py
